overflow fixed

--- a/foodPlace/public/css/styles-cart.css
+++ b/foodPlace/public/css/styles-cart.css
@@ -86,7 +86,5 @@
     color: #ffffff;
  }                           
  
- @media (min-width: 1200px) {
-    
- }
+
  /*-------------------------------------------Cart-----------------------------------------*/
